--- a/g3/g3.csproj
+++ b/g3/g3.csproj
@@ -141,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\b1.jpg" />
+    <None Include="README.md" />
     <None Include="Resources\colourtest.png" />
     <None Include="Resources\colourtest2.png" />
     <None Include="Resources\dark.png" />
